--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 
 
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="resources/js/lib/jquery-1.11.0.min.js" type="text/javascript"></script>
     <script src="resources/bootstrap/js/bootstrap.js"></script>
   </body>
 </html>
